# CppTrain

./: .gitignore  MSYS2_SETUP_GUIDE.md  README.md
Arrays Pointers/: examples.cpp  learning_material.md
Compile/: hello.cpp
Compile/Using Cmake/Satic-Dynamic-cpp-lib/: README.md
Compile/Using Cmake/Satic-Dynamic-cpp-lib/docs/: cmake_libraries.md  dynamic_library.md  overview.md  static_library.md
Compile/Using Cmake/Satic-Dynamic-cpp-lib/examples/combined_usage/: CMakeLists.txt  README.md.in  main.cpp  math_library.cpp  math_library.h  string_utils.cpp  string_utils.h
Compile/Using Cmake/Satic-Dynamic-cpp-lib/examples/dynamic_library/: CMakeLists.txt  main.cpp  string_utils.cpp  string_utils.h
Compile/Using Cmake/Satic-Dynamic-cpp-lib/examples/static_library/: CMakeLists.txt  README.md.in  main.cpp  math_library.h
Compile/Using Cmake/customize-cpp-library/: CMakeLists.txt  README.md
Compile/Using Cmake/customize-cpp-library/docs/: api.md  getting_started.md  symbols_and_dynamic_libs.md
Compile/Using Cmake/customize-cpp-library/examples/: CMakeLists.txt  basic_usage.cpp
Compile/Using Cmake/customize-cpp-library/examples/dlfcn_example/: CMakeLists.txt  Makefile  dynlib.c  dynlib.h  main.c
Compile/Using Cmake/customize-cpp-library/examples/inspect_tools/: README.md
Compile/Using Cmake/customize-cpp-library/examples/symbol_versioning/: CMakeLists.txt  Makefile  version.c  version.h  version_script.map
Compile/Using Cmake/customize-cpp-library/examples/symbol_visibility/: CMakeLists.txt  Makefile  core.c  core.h
Compile/Using Cmake/customize-cpp-library/include/my_library/: core.h  version.h
Compile/Using Cmake/customize-cpp-library/src/: core.cpp  version.cpp
Compile/Using Cmake/customize-cpp-library/tests/: CMakeLists.txt  test_core.cpp  test_version.cpp
Compile/Using MakeFile/Satic-Dynamic-cpp-lib/: BaiTapThucHanh.md  HuongDanMakefile.md  Makefile  README.md  StaticDynamicLibraries_Slides_EN.md  ThuVienCCpp_TaiLieuGiangDay.md  TongQuanThuVien.md  main.c
Compile/Using MakeFile/Satic-Dynamic-cpp-lib/include/: mylib.h
Compile/Using MakeFile/Satic-Dynamic-cpp-lib/src/: mylib.c
Compile/Using MakeFile/custumize-cpp-library/: Makefile  README.md
Compile/Using MakeFile/custumize-cpp-library/docs/: makefile_tutorial.md
Compile/Using MakeFile/custumize-cpp-library/examples/: Makefile  basic_usage.cpp
Compile/Using MakeFile/custumize-cpp-library/include/my_library/: core.h  version.h
Compile/Using MakeFile/custumize-cpp-library/src/: core.cpp  version.cpp
Compile/test/dynamic_library/: DYNAMIC_LOADING.md  README.md.in
Compile/test/static_library/: math_library.cpp
File I-O/: FileIOWrapper.cpp  FileIOWrapper.h  File_IO_Guideline.md  main.cpp
Memory layout/: CMakeLists.txt  README.md  compilation_guide.md  exercises.md  memory_layout_diagrams.md  memory_layout_theory.md
Memory layout/src/: example1_variables.cpp  example2_dynamic_memory.cpp  example3_memory_analysis.cpp  example4_memory_issues.cpp
OOP Abstraction & Encapsulation/: README.md
OOP Abstraction & Encapsulation/docs/: 01_Gioi_thieu.md  02_He_thong_dieu_khien_dong_co.md  03_He_thong_thong_tin_giai_tri.md  04_He_thong_ho_tro_lai_xe.md  05_Bai_tap_thuc_hanh.md  06_Tong_ket.md
OOP Abstraction & Encapsulation/examples/: connectivity_system.cpp  engine_management.cpp  media_system.cpp  sensor_system.cpp
OOP Abstraction & Encapsulation/exercises/: adaptive_cruise_control.cpp  diagnostic_system.cpp
OOP Basic/docs/: deep_vs_shallow_copy.md  gpe_certificates_analysis_and_recommendations.md  gpe_certification_roadmap_2025_2027.md  memory_layout_class_vs_struct.md  oop_basic_deep_shallow_tutorial.md  sample_deep_shallow.cpp  sample_deep_shallow_huongdan.md  sample_sensor_control_full.cpp  sample_sensor_control_huongdan.md  sample_sensor_deepcopy.cpp
Singleton/: CMakeLists.txt  singleton_basic.cpp  singleton_embedded.cpp  singleton_explanation.md
bai1/: Readme.md  ex.txt  ex3.cpp  ex4.cpp  ex5.cpp  test.cpp
bai10/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  my_playlist.m3u
bai11/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
bai12/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
bai13/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
bai14/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
bai15/: ex3.cpp  ex4.cpp
bai15/ex1/: AudioManager.h  DBManager.h  UIManager.h  main.cpp
bai15/ex2/: Playlist.h  main.cpp
bai2/: Readme.md  ex1.cpp  ex2.cpp  ex3.cpp
bai3/: Readme.md  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  test.cpp
bai4/: Readme.md  ex1.cpp
bai5/: Readme.md  flac_codec.cpp  main.cpp  main2.cpp
bai5/Hidden_Internal_Symbols/: PlaylistParser.cpp  main3.cpp
bai5/libAudioFX/: Makefile
bai5/libAudioFX/include/: AudioFX.h
bai5/libAudioFX/src/: AudioFX.cpp  internal_math.h
bai7/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
bai8/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
bai9/: ex1.cpp  ex2.cpp  ex3.cpp
miniPro/: AddAlbumToQueue.cpp  MusicLibrary.cpp  PlaybackQueue.cpp  main.cpp
miniPro/include/: AddAlbumToQueue.h  MusicLibrary.h  PlaybackQueue.h  Song.h
